<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
        android:id="@+id/setting_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_46_dp"
        app:titleText="@string/uikit_account_login_page_title"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/account_login_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/edit_base_line"
        android:drawablePadding="15dp"
        android:hint="@string/uikit_account_login_hint"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/color_999999"
        android:textCursorDrawable="@null"
        android:textSize="15sp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView android:id="@+id/account_login_clear_iv"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@mipmap/icon_clear"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/account_login_et"
        app:layout_constraintTop_toTopOf="@id/account_login_et"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />


    <RelativeLayout android:id="@+id/account_login_token_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/account_login_et"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/account_login_token_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableBottom="@drawable/edit_base_line"
            android:drawablePadding="15dp"
            android:hint="@string/uikit_token_login_hint"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_999999"
            android:textCursorDrawable="@null"
            android:textSize="15sp"
            android:maxLines="2"
            android:gravity="center_vertical"
            tools:ignore="MissingConstraints" />

        <LinearLayout android:id="@+id/email_login_see_pw_group"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@null"
            android:orientation="horizontal">
        </LinearLayout>
    </RelativeLayout>


    <TextView android:id="@+id/login_btn"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:text="@string/login_text"
        android:background="@drawable/bg_login_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>