<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_ededed"
    android:orientation="vertical">

    <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
        android:id="@+id/lang_setting_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:titleText="@string/setting_language" />

    <LinearLayout
        android:id="@+id/lly_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20_dp"
        android:layout_marginVertical="@dimen/dimen_20_dp"
        android:background="@drawable/app_white_round_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rly_chinese"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/dimen_16_dp"
            android:paddingHorizontal="@dimen/dimen_16_dp">
            <TextView
                android:id="@+id/tv_chinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_size_16"
                android:text="@string/setting_chinese"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_chinese"
                android:visibility="gone"
                android:src="@drawable/ic_select_blue"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_05_dp"
            android:background="@color/color_f5f8fc"
            android:layout_marginStart="@dimen/dimen_16_dp"/>

        <RelativeLayout
            android:id="@+id/rly_english"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/dimen_16_dp"
            android:paddingHorizontal="@dimen/dimen_16_dp">
            <TextView
                android:id="@+id/tv_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_size_16"
                android:text="@string/setting_english"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_english"
                android:visibility="gone"
                android:src="@drawable/ic_select_blue"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>