<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_e9eff5"
    tools:ignore="MissingDefaultResource">

    <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
        android:id="@+id/translation_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:titleText="@string/translation_setting_title" />

    <LinearLayout
        android:id="@+id/ll_translation_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_white_round_bg"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/translation_title_bar">

        <!-- 目标语言 -->
        <RelativeLayout
            android:id="@+id/rly_target_language"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_46_dp"
            android:paddingHorizontal="@dimen/dimen_16_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/translation_target_language"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_16_dp"
                tools:ignore="SpUsage" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_target_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_999999"
                    android:textSize="@dimen/dimen_14_dp"
                    tools:ignore="SpUsage"
                    tools:text="中文" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="@dimen/dimen_4_dp"
                    android:src="@drawable/ic_frame_mine_right_arrow" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1_dp"
            android:background="@color/color_f5f8fc" />

        <!-- 自动翻译 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_46_dp"
            android:paddingHorizontal="@dimen/dimen_16_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/translation_auto_translate"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/dimen_16_dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sc_auto_translate"
                android:layout_width="@dimen/dimen_60_dp"
                android:layout_height="@dimen/dimen_20_dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:thumb="@drawable/switch_thumb_selector"
                app:track="@drawable/switch_track_selector" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
